--- a/packages/pizza-ui/components/anchor/style/token.scss
+++ b/packages/pizza-ui/components/anchor/style/token.scss
@@ -12,6 +12,7 @@ $pizza-anchor-background-radius: var(--p-border-radius-large);
 $pizza-anchor-rail-color: var(--p-color-bg-2);
 $pizza-anchor-rail-width: var(--p-rail-width);
 
+$pizza-anchor-link-color: var(--p-color-text-0);
 $pizza-anchor-link-hover-color: var(--p-primary-6);
 
 $pizza-anchor-item-inner-margin-left: $spacing-7;
